[gd_scene load_steps=6 format=3 uid="uid://cj0luk02jxn7m"]

[ext_resource type="Script" path="res://parts/day1.gd" id="1_x411c"]
[ext_resource type="Theme" uid="uid://c4g72gck2md7j" path="res://parts/day_themes.tres" id="2_ndfdt"]

[sub_resource type="Animation" id="Animation_bepd7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundContext:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BackgroundContext/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BackgroundContext/Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1079, 115)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BackgroundContext/DayTitle:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 286)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BackgroundContext:layer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_meaid"]
resource_name = "slowApppear"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundContext:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BackgroundContext/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(5.2, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BackgroundContext/Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2, 4.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(354.5, 121), Vector2(354.5, 121), Vector2(1079, 115)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BackgroundContext/DayTitle:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 3.9, 4.5, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-1088, 286), Vector2(0, 286), Vector2(0, 286), Vector2(0, 286), Vector2(1084, 286)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BackgroundContext:layer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dfwl3"]
_data = {
"RESET": SubResource("Animation_bepd7"),
"slowApppear": SubResource("Animation_meaid")
}

[node name="Day1" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1080.0
offset_bottom = 720.0
script = ExtResource("1_x411c")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.768307, 0.768307, 0.768307, 1)

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 306.0
offset_top = 479.0
offset_right = 720.0
offset_bottom = 564.0
text = "Click me
Ends game."

[node name="Reset" type="Button" parent="."]
layout_mode = 0
offset_left = 928.0
offset_top = 121.0
offset_right = 1072.0
offset_bottom = 228.0
text = "Reset"

[node name="Counter" type="Label" parent="."]
layout_mode = 0
offset_left = 816.0
offset_top = 2.0
offset_right = 1080.0
offset_bottom = 62.0
theme_override_font_sizes/font_size = 29
text = "Game is: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextArea" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -464.0
offset_top = -144.0
offset_right = 465.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0

[node name="GameEnter" type="RichTextLabel" parent="TextArea"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -813.0
offset_top = -49.5
offset_right = -14.0
offset_bottom = 52.5
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_ndfdt")
text = "Pretend text exists here."

[node name="PersonIcon" type="TextureRect" parent="TextArea"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -50.5
offset_right = 107.0
offset_bottom = 50.5
grow_vertical = 2

[node name="Which game number" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 203.0
offset_right = 228.0
offset_bottom = 370.0

[node name="BackgroundContext" type="CanvasLayer" parent="."]
process_mode = 4
process_priority = -1
layer = 0

[node name="ColorRect" type="ColorRect" parent="BackgroundContext"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="BackgroundContext"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 1079.0
offset_top = 115.0
offset_right = 1450.0
offset_bottom = 189.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Day 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DayTitle" type="Label" parent="BackgroundContext"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 286.0
offset_right = 1080.0
offset_bottom = 605.0
grow_horizontal = 2
grow_vertical = 2
text = "THIS IS SOME TEXT"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dfwl3")
}

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
